<?xml version="1.0" encoding="utf-8"?>
<com.rayfenwindspear.speedlocktimer.View.Main.MainView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/main_view"
    android:background="#000000"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/distance"
            android:layout_marginBottom="37dp"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:text="@string/accuracyNA" />
        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/speed"
            android:layout_marginBottom="37dp"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:text="@string/distanceNA" />
        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="37dp"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:text="@string/speedNA" />
        <TextView
            android:id="@+id/timerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speed"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="37dp"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:text="@string/timerVal" />

        <Button
            android:onClick="setLastActionLocation"
            android:id="@+id/startButton"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_below="@+id/timerValue"
            android:layout_centerHorizontal="true"
            android:text="@string/startButtonLabel" />


    </RelativeLayout>


</com.rayfenwindspear.speedlocktimer.View.Main.MainView>